--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Diretório de Templates</title>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-</head>
-<body>
-    <h1>Mysql DbDoc</h1>
-</body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/sticky-footer-navbar.css" rel="stylesheet">
+    
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">MysqlDbDoc</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Conexões <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Conexão 1</a></li>
+                <li><a href="#">Conexão 2</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Gerenciar conexões</a></li>
+              </ul>
+            </li>
+            <!--
+            <li><a href="#">Menu 1</a></li>
+            <li><a href="#">Menu 2</a></li>
+            <li><a href="#">Sobre</a></li>
+            -->
+          </ul>
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input name="txtargumentobusca" id="txtargumentobusca" type="text" class="form-control" placeholder="Procurando alguma coisa?">
+            </div>
+            <button id="btnBusca" type="submit" class="btn btn-default">Buscar</button>
+          </form>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <!-- Begin page content -->
+    <div class="container">
+
+      <div class="page-header">
+        <h1>MysqlDbDoc</h1>
+        <h2>Documentando seu banco de dados.</h2>
+      </div>
+      <p class="lead">Aqui teremos a interface para edição da documentação do banco de dados, <code>não existirá a necessidade de login</code> uma vez que a conexão for configurada.</p>
+      <p>Mudanças acontecerão no decorrer do desenvolvimento.</p>
+    </div>
+
+
+
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">jonasthomaz@gmail.com</p>
+      </div>
+    </footer>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
